--- a/src/app/tools/icon-set-config/presentation/icon-set-details/icon-set-details.component.scss
+++ b/src/app/tools/icon-set-config/presentation/icon-set-details/icon-set-details.component.scss
@@ -5,7 +5,7 @@
   grid-row-gap: 1px;
   overflow-y: auto;
   overflow-x: auto;
-  width: 250px;
+
   border-left: solid 1px #ccc;
 }
 
@@ -39,7 +39,6 @@
 }
 
 .inputWidth {
-  width: 200px;
   margin-left: 15px;
 }
 
